# django-orcamentos

./: .env.sample  README.md  pyproject.toml
apps/clientes/: admin.py  forms.py  models.py  urls.py  views.py
apps/clientes/migrations/: 0001_initial.py  0002_cliente_empresa.py  0003_cliente_observacoes.py
apps/clientes/templates/clientes/: cliente_confirm_delete.html  cliente_detail.html  cliente_form.html  cliente_list.html
apps/empresas/: admin.py  models.py
apps/empresas/migrations/: 0001_initial.py
apps/orcamentos/: apps.py  forms.py  models.py  urls.py  views.py
apps/orcamentos/migrations/: 0001_initial.py  0002_alter_orcamento_status.py
apps/orcamentos/templates/orcamentos/: orcamento_confirma_cancelamento.html  orcamento_detail.html  orcamento_form.html  orcamento_list.html
config/: settings.py  urls.py
shared/: forms.py  models.py
templates/layout/: base.html
templates/partials/: header.html  page_header.html  sidebar.html
